--- a/index.css
+++ b/index.css
@@ -12,8 +12,6 @@
     justify-content: flex-end;
     color: #9800c6;
     text-align: center;
-    margin: 0 50px;
-    padding: 10px 20px 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -26,9 +24,24 @@ flex-wrap: wrap;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 25px;
     margin: 100px;
+    color: #9800c6;
 }
 
 /* .main-img{
     height: 50%;
     width: 20%;
 } */
+
+.about-us{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 25px;
+    margin: 100px;
+    color: #f9552f;
+}
+
+.student-names{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 25px;
+    margin: 100px;
+    color: #ffa602;
+}
