--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 .Bubl-text{
-    font-size: 44px;
+    font-size: 50px;
     color: #4af5bc;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -8,7 +8,7 @@
     display: flex;
     font-size: 20px;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     color:#4af5bc;
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -29,10 +29,9 @@ flex-wrap: wrap;
     color: #9800c6;
 }
 
-/* .main-img{
-    height: 50%;
-    width: 20%;
-} */
+.main-img{
+   align-items: center;
+}
 
 .about-us{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -41,9 +40,42 @@ flex-wrap: wrap;
     color: #f9552f;
 }
 
-.student-names{
+.team{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    margin: 100px;
+    color: #2fb8be;
+}
+
+.footer{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 25px;
     margin: 100px;
     color: #ffa602;
+    text-align: center;
+}
+
+button{
+    background-color:#4af5bc;
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-size:17px;
+	font-weight:bold;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+
+.container{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 15px;
+    margin: 100px;
+    color: #2fb8be;
+}
 }
